[metadata]
name = digital-rail-concentrator
description = Socket server for Digital Rail to communicate with all decoders.
long_description = file: README.md
long_description_content_type = text/markdown
license = Public Domain
version = 1.0.0

[options]
zip_safe = False
include_package_data = True
packages = find:
